# gasripper

./: .gitignore  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
scripts/: solc_sidecar.py  vyper_sidecar.py
src/: cli.rs  config.rs  main.rs  sidecar.rs  solc.rs
src/core/: asm.rs  bytecode.rs  inline.rs  mod.rs  opcodes.rs  stack.rs  strip.rs  superopt.rs
src/features/: e2e_harness.rs  mod.rs  progress.rs  progressive_e2e.rs
src/features/cmpnorm/: README.md  e2e.rs  mod.rs
src/features/fold_shift/: README.md  e2e.rs  mod.rs
src/features/guards/: README.md  e2e.rs  mod.rs
src/features/inline/: README.md  e2e.rs  mod.rs
src/features/involution/: README.md  e2e.rs  mod.rs
src/features/recompute/: README.md  e2e.rs  mod.rs
src/features/shuffle/: README.md  e2e.rs  mod.rs
src/features/strip_abi/: README.md  e2e.rs  mod.rs
src/features/strip_assert/: README.md  e2e.rs  mod.rs
src/features/strip_math/: README.md  e2e.rs  mod.rs
src/features/superopt/: README.md  e2e.rs  mod.rs
src/input/: mod.rs  raw_asm.rs  solidity.rs  vyper.rs
