[package]
name = "gasripper"
version = "0.1.0"
edition = "2024"
description = "Super-aggressive gas optimizer for EVM bytecode and assembly"
license = "MIT"

[[bin]]
name = "gasripper"
path = "src/main.rs"

[dependencies]
# Argument parsing and --help/--version generation. The config parser and core
# stay on std, so the tool remains predictable for a gas-critical workflow.
clap = { version = "4.6.1", features = ["derive"] }
# Diagnostic logging (compiler versions, errors, e2e gas proofs). Level is driven
# by RUST_LOG via tracing-subscriber's EnvFilter; the CLI report stays on stdout.
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Read/edit solc's nested `--asm-json` assembly directly in Rust, so the Solidity
# backend drives the `solc` binary with no Python sidecar (the assembly itself is
# re-linked by solc via `--import-asm-json`; gasripper writes no linker).
serde_json = "1"

[dev-dependencies]
# Test-only: a real EVM to prove that stripped creation bytecode still deploys,
# computes the same result, and costs less gas. Never linked into the binary, so
# the shipped tool stays pure-std.
revm = "41"
